--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ title: Prateek Dayal
 subtitle: Rants and Praises on/for the World!
 author: Prateek Dayal
 simple_search: http://google.com/search
+twitter_user: prateekdayal
 description:
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
@@ -50,7 +51,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [custom/asides/twitter.html, asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 exclude: ["*.swp"]
 
 
