--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://prateekdayal.github.io
+url: http://blog.prateekdayal.net
 title: Prateek Dayal
 subtitle: Rants and Praises on/for the World!
 author: Prateek Dayal
